# aibotBackendMicroServices

./: .gitignore  package-lock.json  package.json
crawlerService_py/: db.py  embed.py  main.py  output.txt  pyproject.toml  test.py  utils.py
mainservice_nest/: .env  package-lock.json  package.json  schema.prisma  tsconfig.app.json
mainservice_nest/src/: app.module.ts  init.consumer.ts  main.ts
mainservice_nest/src/infrastructure/kafka/: consumer.service.ts  kafka.module.ts  kafkajs.consumer.ts  kafkajs.producer.ts
mainservice_nest/src/infrastructure/prisma/: prisma.service.ts
mainservice_nest/src/infrastructure/redis/: redis.module.ts  redis.provider.ts
mainservice_nest/src/infrastructure/s3/: s3.service.ts
mainservice_nest/src/v1/auth/: auth.controller.ts  auth.module.ts  auth.service.ts
mainservice_nest/src/v1/auth/dtos/: auth.dto.ts
mainservice_nest/src/v1/auth/guards/: google-oauth.guard.ts  jwt.guard.ts  local.guard.ts  refresh.guard.ts
mainservice_nest/src/v1/auth/strategies/: google-oauth.strategy.ts  local-strategy.ts
mainservice_nest/src/v1/bots/: bots.controller.ts  bots.module.ts  bots.service.ts
mainservice_nest/src/v1/bots/dtos/: mybots.dto.ts
mainservice_nest/src/v1/chat/: chat.controller.ts  chat.service.ts
mainservice_nest/src/v1/crawler/: crawler.controller.ts  crawler.module.ts  crawler.service.ts
mainservice_nest/src/v1/decorators/: chatSession.decorator.ts  user.decorator.ts
mainservice_nest/src/v1/stream/: stream.module.ts
mainservice_nest/src/v1/widget/: widget.controller.ts  widget.module.ts  widget.service.ts
(+4 files in other folders)
