[tool.poetry]
name = "crawlerservice-py"
version = "0.1.0"
description = ""
authors = ["Moein Moeinnia <Moeinnia@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
psycopg2 = "^2.9.9"
langchain = "^0.1.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
